--- a/ansible/inventory/inventory.yaml
+++ b/ansible/inventory/inventory.yaml
@@ -1,8 +1,27 @@
-okd:
-  hosts:
-    okd_service_node: 
-      ansible_host: 10.11.12.210
-other:
-  hosts:
-    nfs_server: 
-      ansible_host: 10.11.12.213
+all:
+  children:
+    okd:
+      hosts:
+        okd_service_node:
+          ansible_host: 10.11.12.210
+    other:
+      hosts:
+        nfs_server:
+          ansible_host: 10.11.12.213
+    nodes:
+      hosts:
+        node1:
+          ansible_host: 10.11.12.241
+          ip: 10.11.12.241
+          access_ip: 10.11.12.241
+          ansible_user: root
+        node2:
+          ansible_host: 10.11.12.242
+          ip: 10.11.12.242
+          access_ip: 10.11.12.242
+          ansible_user: root
+        node3:
+          ansible_host: 10.11.12.243
+          ip: 10.11.12.243
+          access_ip: 10.11.12.243
+          ansible_user: root
