--- a/terraform_proxmox/configs/vms.yaml
+++ b/terraform_proxmox/configs/vms.yaml
@@ -1,30 +1,25 @@
 tags:
-  - Terraform
+  - terraform
 vms:
-    - vm_id: 301
-      vm_name: kube-node-01
-      address: 10.11.12.241/24
-      node_name: pve3
-      cores: 4
-      ram: 8192
-      tags:
-        - kubespray
-        - oracle_linux
-    - vm_id: 302
-      vm_name: kube-node-02
-      address: 10.11.12.242/24
-      node_name: pve4
-      cores: 4
-      ram: 8192
-      tags:
-        - kubespray
-        - oracle_linux
-    - vm_id: 303
-      vm_name: kube-node-03
-      address: 10.11.12.243/24
-      node_name: pve5
-      cores: 4
-      ram: 8192
-      tags:
-        - kubespray
-        - oracle_linux
+  - vm_id: 301
+    vm_name: kube-node-01
+    address: 10.11.12.241/24
+    node_name: pve3
+    cores: 4
+    ram: 8192
+    tags: [kubespray, oracle_linux]
+  - vm_id: 302
+    vm_name: kube-node-02
+    address: 10.11.12.242/24
+    node_name: pve4
+    cores: 4
+    ram: 8192
+    tags: [kubespray, oracle_linux]
+  - vm_id: 303
+    vm_name: kube-node-03
+    address: 10.11.12.243/24
+    node_name: pve5
+    cores: 4
+    ram: 8192
+    tags: [kubespray, oracle_linux]
+
