--- a/manifests/letsencrypt/ClusterIssuer.yaml
+++ b/manifests/letsencrypt/ClusterIssuer.yaml
@@ -2,16 +2,14 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
-  namespace: cert-manager
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: vizzlef@gmail.com
-    privateKeySecretRef: 
+    privateKeySecretRef:
       name: letsencrypt
     solvers:
-    - selector: {}
-      http01:
+    - http01:
         ingress:
-          serviceType: ClusterIP
+          class: nginx
 
