--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ terraform/terraform.exe
 terraform/.terraform*
 terraform/variables.tf
 ansible/roles/okd_sn_config_daemons/files/install-config.yaml
+kubespray*
