--- a/ansible/playbooks/oracle_new_vm.yaml
+++ b/ansible/playbooks/oracle_new_vm.yaml
@@ -5,3 +5,9 @@
     - oracle_firewalld_disable
     - oracle_selinux_disable
     - oracle_timezone_set
+
+- name: Configure Oracle VM
+  hosts: nodes
+  roles:
+    - oracle_install_packages
+    - oracle_kube_node_increase_lvm_size
