--- a/terraform_proxmox/configs/vms.yaml
+++ b/terraform_proxmox/configs/vms.yaml
@@ -6,7 +6,8 @@ vms:
     address: 10.11.12.241/24
     node_name: pve3
     cores: 4
-    ram: 8192
+    ram: 12288
+    disk_size: 100
     tags: [kubespray, oracle_linux]
     pool_id: k8s-pool
   - vm_id: 302
@@ -14,7 +15,8 @@ vms:
     address: 10.11.12.242/24
     node_name: pve4
     cores: 4
-    ram: 8192
+    ram: 12288
+    disk_size: 100
     tags: [kubespray, oracle_linux]
     pool_id: k8s-pool
   - vm_id: 303
@@ -22,7 +24,8 @@ vms:
     address: 10.11.12.243/24
     node_name: pve5
     cores: 4
-    ram: 8192
+    ram: 12288
+    disk_size: 100
     tags: [kubespray, oracle_linux]
     pool_id: k8s-pool
 
