--- a/helm/values/ingress-nginx.values.yaml
+++ b/helm/values/ingress-nginx.values.yaml
@@ -1,4 +1,11 @@
 controller:
+  config:
+    allow-snippet-annotations: "true"
   service:
     type: LoadBalancer
     loadBalancerIP: 10.11.12.160
+  ingressClassResource:
+    name: nginx
+    enabled: true
+    default: true
+    controllerValue: "k8s.io/ingress-nginx"
