--- a/helm/values/nextcloud.values.yaml
+++ b/helm/values/nextcloud.values.yaml
@@ -3,6 +3,10 @@ nextcloud:
   username: ivan
   password: "changeme"
   
+service:
+  type: LoadBalancer
+  loadBalancerIP: "10.11.12.165"
+
 persistence:
   enabled: true
   accessMode: ReadWriteOnce
@@ -10,34 +14,36 @@ persistence:
 
 ingress:
   enabled: true
+  className: nginx
   annotations:
-   nginx.ingress.kubernetes.io/proxy-body-size: 4G
-   kubernetes.io/tls-acme: "true"
-   cert-manager.io/cluster-issuer: letsencrypt
-   nginx.ingress.kubernetes.io/server-snippet: |-
-     server_tokens off;
-     proxy_hide_header X-Powered-By;
-     rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
-     rewrite ^/.well-known/nodeinfo /index.php/.well-known/nodeinfo last;
-     rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
-     rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
-     location = /.well-known/carddav {
-       return 301 $scheme://$host/remote.php/dav;
-     }
-     location = /.well-known/caldav {
-       return 301 $scheme://$host/remote.php/dav;
-     }
-     location = /robots.txt {
-       allow all;
-       log_not_found off;
-       access_log off;
-     }
-     location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
-       deny all;
-     }
-     location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
-       deny all;
-     }
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: 4G
+    kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/server-snippet: |-
+      server_tokens off;
+      proxy_hide_header X-Powered-By;
+      rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
+      rewrite ^/.well-known/nodeinfo /index.php/.well-known/nodeinfo last;
+      rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
+      rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
+      location = /.well-known/carddav {
+        return 301 $scheme://$host/remote.php/dav;
+      }
+      location = /.well-known/caldav {
+        return 301 $scheme://$host/remote.php/dav;
+      }
+      location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+      }
+      location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
+        deny all;
+      }
+      location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
+        deny all;
+      }
   tls:
     - hosts:
       - nc.vakaf.space
