--- a/ansible/playbooks/oracle_new_vm.yaml
+++ b/ansible/playbooks/oracle_new_vm.yaml
@@ -5,9 +5,10 @@
     - oracle_firewalld_disable
     - oracle_selinux_disable
     - oracle_timezone_set
+    - oracle_increase_lvm_size
+    - oracle_install_packages
 
 - name: Configure Oracle VM
-  hosts: nodes
+  hosts: kube_node
   roles:
-    - oracle_install_packages
-    - oracle_kube_node_increase_lvm_size
+    - oracle_kn_install_packages
