--- a/helm/values/ingress-nginx.values.yaml
+++ b/helm/values/ingress-nginx.values.yaml
@@ -1,5 +1,7 @@
 controller:
-  allowSnippetAnnotations: "true"
+  allowSnippetAnnotations: true
+  config:
+    allow-snippet-annotations: "true"
   service:
     type: LoadBalancer
     loadBalancerIP: 10.11.12.160
