--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -7,6 +7,7 @@ remote_tmp = /tmp/.ansible-${USER}/tmp
 interpreter_python = /usr/bin/python3
 forks = 20
 gathering = explicit
+force_color = True
 
 [ssh_connection]
 pipelining = True
