--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -19,7 +19,11 @@ repositories:
   - name: nextcloud           	
     url: https://nextcloud.github.io/helm/                 
   - name: vaultwarden         	
-    url: https://guerzon.github.io/vaultwarden             
+    url: https://guerzon.github.io/vaultwarden
+  # - name: seaweedfs
+  #   url: https://seaweedfs.github.io/seaweedfs/helm
+  # - name: seaweedfs-csi-driver
+  #   url: https://seaweedfs.github.io/seaweedfs-csi-driver/helm
   # - name: prometheus-community	
   #   url: https://prometheus-community.github.io/helm-charts
   # - name: grafana             	
@@ -40,11 +44,10 @@ releases:
   - name: longhorn
     namespace: longhorn-system
     chart: longhorn/longhorn
-    version: 1.6.2
+    version: 1.7.0
     values:
       - ./values/longhorn.values.yaml
 
-  # Load balancer
   - name: metallb
     chart: metallb/metallb
     namespace: metallb-system
@@ -53,14 +56,44 @@ releases:
   - name: ingress-nginx
     chart: ingress-nginx/ingress-nginx
     namespace: ingress-nginx
-    version: 4.11.1
+    version: 4.11.2
+    values:
+      - ./values/ingress-nginx.values.yaml
   
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
-    version: v1.15.2
+    version: v1.15.3
     values:
       - ./values/cert-manager.values.yaml
+
+  - name: vaultwarden
+    namespace: vaultwarden
+    chart: vaultwarden/vaultwarden
+    version: 0.25.2
+    values:
+      - ./values/vaultwarden.values.yaml
+
+  - name: nextcloud
+    namespace: nextcloud
+    chart: nextcloud/nextcloud
+    version: 5.5.3
+    values:
+      - ./values/nextcloud.values.yaml
+
+  # - name: seaweedfs
+  #   namespace: seaweedfs
+  #   chart: seaweedfs/seaweedfs
+  #   version: 4.0.0
+  #   values:
+  #     - ./values/seaweedfs.values.yaml
+  
+  # - name: seaweedfs-csi-driver
+  #   namespace: seaweedfs
+  #   chart: seaweedfs-csi-driver/seaweedfs-csi-driver
+  #   version: 0.2.2
+  #   values:
+  #     - ./values/seaweedfs-csi-driver.values.yaml
 
   # pihole
   # - name: pihole
@@ -91,20 +124,6 @@ releases:
   #   version: 8.4.5
   #   values:
   #     - ./values/grafana.values.yaml
-
-  - name: vaultwarden
-    namespace: vaultwarden
-    chart: vaultwarden/vaultwarden
-    version: 0.24.0
-    values:
-      - ./values/vaultwarden.values.yaml
-
-  - name: nextcloud
-    namespace: nextcloud
-    chart: nextcloud/nextcloud
-    version: 5.5.2
-    values:
-      - ./values/nextcloud.values.yaml
 
   # - name: ollama
   #   namespace: ollama
