--- a/helm/values/nextcloud.values.yaml
+++ b/helm/values/nextcloud.values.yaml
@@ -16,6 +16,15 @@ nextcloud:
   #     autoCreate: true 
   #     # legacyAuth: true
   #     usePathStyle: true
+  extraVolumes:
+   - name: nfs-backup
+     nfs:
+       server: "10.11.12.213"
+       path: "/nfs-share/nc/backups"
+       readOnly: false
+  extraVolumeMounts:
+   - name: nfs-backup
+     mountPath: "/backup"
 
 replicaCount: 1
 
@@ -42,6 +51,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: 4G
+    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
     kubernetes.io/tls-acme: "true"
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/server-snippet: |-
@@ -110,10 +120,11 @@ externalDatabase:
   password: sup3rstr0ngP@s$
   database: nextcloud
 
-startupProbe:
-  enabled: true
-  initialDelaySeconds: 7200
-  periodSeconds: 60
-  timeoutSeconds: 5
-  failureThreshold: 15
-  successThreshold: 1
+# FOR THE FIRST TIME. BUG WITH RWX VOLUME
+# startupProbe:
+#   enabled: true
+#   initialDelaySeconds: 7200
+#   periodSeconds: 60
+#   timeoutSeconds: 5
+#   failureThreshold: 15
+#   successThreshold: 1
