--- a/helm/values/cluster-status-app.values.yaml
+++ b/helm/values/cluster-status-app.values.yaml
@@ -4,7 +4,6 @@ replicaCount: 1
 image:
   repository: ghcr.io/vizzletf/cluster-status-app
   pullPolicy: Always
-  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -48,16 +47,36 @@ ingress:
      hosts:
        - status.vakaf.space
 
-resources: {}
+resources:
+  requests:
+    memory: "256Mi"
+    cpu: "500m"
+  limits:
+    memory: "512Mi"
+    cpu: "1500m"
 
 autoscaling:
-  enabled: false
+  enabled: true
+  minReplicas: 1
+  maxReplicas: 6
+  targetCPUUtilizationPercentage: 30
 
 nodeSelector: {}
 
 tolerations: []
 
-affinity: {}
+affinity:
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+              - key: "app"
+                operator: In
+                values:
+                  - "cluster-status-app"
+          topologyKey: "kubernetes.io/hostname"
 
 env:
   - name: PROXMOX_API_URL
@@ -75,8 +94,16 @@ env:
       secretKeyRef:
         name: proxmox-credentials
         key: password
+  - name: PROXMOX_TASK_TIMEOUT
+    value: "300"
   - name: KUBECONFIG
     value: /root/.kube/config
+  - name: REDIS_HOST
+    value: "cluster-status-app-redis"
+  - name: REDIS_PORT
+    value: "6379"
+  - name: REDIS_ENABLED
+    value: "true"
 
 volumes:
   - name: kubeconfig
@@ -104,3 +131,42 @@ probes:
       port: 8080
     initialDelaySeconds: 5
     periodSeconds: 10
+
+redis:
+  enabled: true
+  architecture: standalone
+  auth:
+    enabled: false
+  master:
+    persistence:
+      enabled: false
+
+config:
+  server:
+    port: 8080
+    readTimeout: 5s
+    writeTimeout: 10s
+    idleTimeout: 15s
+  redis:
+    poolSize: 100
+  kubernetes:
+    config: "/root/.kube/config"
+  proxmox:
+    apiUrl: "https://10.11.12.51:8006/api2/json"
+    insecureSkipVerify: true
+    taskTimeout: "300s"
+    vsmDomainType: 1
+  workerPool:
+    size: 10
+  cache:
+    helmReleasesTTL: 10s
+    nodeStatusesTTL: 10s
+    proxmoxNodesTTL: 10s
+    podStatusesTTL: 10s
+  handler:
+    timeout: 30s
+  logging:
+    level: "info"
+    format: "json"
+  cache:
+    ttl: 10s
