--- a/helm/values/seaweedfs.values.yaml
+++ b/helm/values/seaweedfs.values.yaml
@@ -11,7 +11,7 @@ master:
     host: "seaweed.home.vakaf.space"
     annotations:
       kubernetes.io/tls-acme: "true"
-      cert-manager.io/cluster-issuer: letsencrypt
+      cert-manager.io/cluster-issuer: cloudflare-issuer
       nginx.ingress.kubernetes.io/auth-type: "basic"
       nginx.ingress.kubernetes.io/auth-secret: "default/ingress-basic-auth-secret"
       nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - SW-Master'
