--- a/manifests/vaultwarden/restore_pod.yaml
+++ b/manifests/vaultwarden/restore_pod.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: restore-data
-  namespace: nextcloud
+  namespace: vaultwarden
 spec:
   containers:
   - name: restore
     image: instrumentisto/rsync-ssh
-    command: ["sleep"]
+    command: ["rsync", "-avz", "/source/", "/destination/"]
     volumeMounts:
     - name: nfs-volume
       mountPath: /source
@@ -17,8 +17,8 @@ spec:
   volumes:
   - name: longhorn-volume
     persistentVolumeClaim:
-      claimName: nextcloud-nextcloud
+      claimName: vaultwarden-data-vaultwarden-0
   - name: nfs-volume
     nfs:
       server: 10.11.12.213
-      path: "/nfs-share/nc/backups/data/ivan/"
+      path: "/nfs-share/vault"
