fix: adjust backups and update ingress-nginx
- Update ingress-nginx to 4.12.1
- Disable nfs backup volume
- Adjust rsync options
- Change NFS server address

--- a/helm/values/nextcloud.values.yaml
+++ b/helm/values/nextcloud.values.yaml
@@ -16,12 +16,12 @@ nextcloud:
   #     autoCreate: true 
   #     # legacyAuth: true
   #     usePathStyle: true
-  extraVolumes:
-   - name: nfs-backup
-     nfs:
-       server: "10.11.12.213"
-       path: "/nfs-share/nc/backups"
-       readOnly: false
+  # extraVolumes:
+  #  - name: nfs-backup
+  #    nfs:
+  #      server: "10.11.12.213"
+  #      path: "/nfs-share/nc/backups"
+  #      readOnly: false
   extraVolumeMounts:
    - name: nfs-backup
      mountPath: "/backup"
