--- a/helm/values/externaldns.values.yaml
+++ b/helm/values/externaldns.values.yaml
@@ -2,7 +2,7 @@
 provider: cloudflare
 
 # Policy for handling DNS records
-policy: upsert-only
+policy: sync
 
 # Unique identifier for this external-dns instance
 txtOwnerId: "homelab-k8s"
@@ -10,7 +10,6 @@ txtOwnerId: "homelab-k8s"
 # Sources to watch for DNS records
 sources:
   - ingress
-  - service
 
 # Domain filter - укажите ваш домен
 domainFilters:
